# ipwnponies.github.io

./: .gitignore  .pre-commit-config.yaml  Makefile  git-commit.template  pyproject.toml  requirements-bootstrap.txt
_posts/: 2019-02-15-applescript.md  2019-04-07-cross-compile-to-arm.md  2019-05-14-n-plus-one.md  2019-08-03-sticky-rice-xoi.md  2020-04-15-timsort.md  2020-05-02-kadanes-algorithm.md  2020-05-03-summed-area-table.md  2020-05-11-backdoor-roth.md  2020-08-05-graph-traversal-algorithms.md  2021-07-09-hamming-codes.md  2021-07-20-sorting-by-rating.md  2021-08-20-digital-vaccine-cards.md  2021-09-03-air-quality-index.md  2021-09-19-cloud-storage-virtual-drive.md  2021-09-21-fps-hitscan-projectile.md  2021-09-26-japanese-sweet-potato.md  2021-09-27-food-with-medicine.md  2021-09-27-mexican-food.md  2021-10-03-dithering.md  2021-10-04-full-motion-video.md  2021-11-22-spanish-verb-types.md  2021-12-22-learning-spanish-creer-vs-pensar.md  2021-12-23-git-smudge-clean-filters.md  2022-01-02-apple-pull-apart-bread.md  2022-01-06-calibrating-oven-temperature.md  2022-01-08-calibrating-instant-read-thermometer.md  2022-01-16-learning-spanish-past-tense-conjugations.md  2022-01-23-bypassing-js-paste-blocker.md  2022-01-24-moral-hazard.md  2022-02-09-python-script-module.md  2022-02-21-stable-marriage-problem.md  2022-03-01-garage-door-remote.md  2022-03-08-line_profiler-but-no-magic.md  2022-03-13-taco-styles.md  2022-03-20-pythagoras-cup.md  2022-03-21-debouncing-javascript.md  2022-03-27-ssh-agent.md  2022-04-10-chile-relleno.md  2022-04-29-cold-oven-cake.md  (+20 more)
(+8 files in other folders)
