[tool.poetry]
name = "ipwnponies.github.io"
version = "0.1.0"
description = ""
authors = ["John Nguyen <ipwnponies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.12"
typer = "^0.3"
coverage = "^6.2"
flake8 = "^4.0.1"
ipython = "^8.0.1"
pre-commit = "^2.17.0"
pudb = "^2022.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
python-frontmatter = "^1.0.0"
tabulate = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
